idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "." "../components/led/include" "../components/bacnetclient/include" "../components/httpserver/include" "../components/solar/include" "../components/fram/include" "../components/rtc/include"
    REQUIRES
        esp_driver_spi
        esp_wifi
        esp_netif
        lwip
        nvs_flash
        driver
        esp_event
        bacnet
        bacnetclient
        bacnetserver
        esp_modem
        esp_http_server
        json
        led
        wifi
        fram
        rtc
        solar
        httpserver
)