idf_component_register(
    SRCS
        "src/NTP.c" 
    INCLUDE_DIRS 
        "." "include" "../led/include" "../bacnetclient/include" "../httpserver/include" "../solar/include" "../fram/include" "../rtc/include" "../modem/include" "../bacnet/include"
    REQUIRES 
    driver 
    led_strip 
    esp_wifi 
    esp_netif
    lwip 
    esp_event 
    esp_modem 
    modem 
    esp_http_server 
    httpserver 
    json 
    led 
    rtc 
    solar 
    wifi
    bacnet
)