idf_component_register(
    SRCS
        "src/abort.c"
        "src/address.c"
        "src/ai.c"
        "src/alarm_ack.c"
        "src/ao.c"
        "src/apdu.c"
        "src/arf.c"
        "src/av.c"
        "src/awf.c"
        "src/bacaddr.c"
        "src/bacapp.c"
        "src/bacdcode.c"
        "src/bacdevobjpropref.c"
        "src/bacerror.c"
        "src/bacint.c"
        "src/bacprop.c"
        "src/bacpropstates.c"
        "src/bacreal.c"
        "src/bacstr.c"
        "src/bactext.c"
        "src/bactimevalue.c"
        "src/bi.c"
        "src/bigend.c"
        "src/bip-init.c"
        "src/bip.c"
        "src/bo.c"
        "src/bv.c"
        "src/bvlc.c"
        "src/cov.c"
        "src/datetime.c"
        "src/dcc.c"
        "src/debug.c"
        "src/device.c"
        "src/dlenv.c"
        "src/event.c"
        "src/filename.c"
        "src/getevent.c"
        "src/get_alarm_sum.c"
        "src/h_alarm_ack.c"
        "src/h_arf.c"
        "src/h_arf_a.c"
        "src/h_awf.c"
        "src/h_ccov.c"
        "src/h_cov.c"
        "src/h_dcc.c"
        "src/h_gas_a.c"
        "src/h_getevent.c"
        "src/h_get_alarm_sum.c"
        "src/h_iam.c"
        "src/h_ihave.c"
        "src/h_npdu.c"
        "src/h_pt.c"
        "src/h_pt_a.c"
        "src/h_rd.c"
        "src/h_rp.c"
        "src/h_rpm.c"
        "src/h_rpm_a.c"
        "src/h_rp_a.c"
        "src/h_rr.c"
        "src/h_rr_a.c"
        "src/h_ts.c"
        "src/h_ucov.c"
        "src/h_upt.c"
        "src/h_whohas.c"
        "src/h_whois.c"
        "src/h_wp.c"
        "src/h_wpm.c"
        "src/iam.c"
        "src/ihave.c"
        "src/indtext.c"
        "src/key.c"
        "src/keylist.c"
        "src/memcopy.c"
        "src/nc.c"
        "src/noserv.c"
        "src/npdu.c"
        "src/proplist.c"
        "src/ptransfer.c"
        "src/rd.c"
        "src/readrange.c"
        "src/reject.c"
        "src/rp.c"
        "src/rpm.c"
        "src/s_arfs.c"
        "src/s_awfs.c"
        "src/s_cevent.c"
        "src/s_cov.c"
        "src/s_dcc.c"
        "src/s_iam.c"
        "src/s_ihave.c"
        "src/s_ptransfer.c"
        "src/s_rd.c"
        "src/s_readrange.c"
        "src/s_router.c"
        "src/s_rp.c"
        "src/s_rpm.c"
        "src/s_ts.c"
        "src/s_uevent.c"
        "src/s_upt.c"
        "src/s_whohas.c"
        "src/s_whois.c"
        "src/s_wp.c"
        "src/s_wpm.c"
        "src/timestamp.c"
        "src/timesync.c"
        "src/tsm.c"
        "src/txbuf.c"
        "src/version.c"
        "src/whohas.c"
        "src/whois.c"
        "src/wp.c"
        "src/wpm.c"
        "src/schedule.c"
        "src/calendarentry.c"
        "src/dailyschedule.c"
        "src/special_event.c"
        "src/weeklyschedule.c"
        "src/trendlog.c"
        "src/msv.c"
        "src/calendar.c"
        "src/schedule_persist.c"
    INCLUDE_DIRS 
        "." "include" "../fram/include" "../led/include" 
    REQUIRES esp_netif esp_event lwip driver esp_wifi led
)