idf_component_register(
    SRCS
        "src/rtc_pcf8563.c" 
    INCLUDE_DIRS 
        "." "include" 
    REQUIRES 
        esp_driver_spi
        esp_wifi
        esp_netif
        lwip
        nvs_flash
        driver
        esp_event
        bacnet
        bacnetclient
        bacnetserver
        esp_modem
        esp_http_server
        json
        led
        wifi
        fram
        rtc
        solar
        httpserver
)